--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=TODOLIST
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Y+5+WIIXAMfhjOWFmqEwCIdd5GZUsN2m9/mE11gT7KU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,11 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_DATABASE=db__todolist
+DB_USERNAME=user
+DB_PASSWORD=secret
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
